--- a/Programming/C++/Example/Example/Example.vcxproj.filters
+++ b/Programming/C++/Example/Example/Example.vcxproj.filters
@@ -1,17 +1,67 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <ClCompile Include="Example.cpp" />
+    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01\E01Example_01.cpp">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01</Filter>
+    </ClCompile>
+    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01\T01Training_01.cpp">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01</Filter>
+    </ClCompile>
+    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02\E01Example_02.cpp">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02</Filter>
+    </ClCompile>
+    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02\T01Training_02.cpp">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001">
+      <UniqueIdentifier>{e742bb6d-ab0c-4f14-a10b-a6186a7442da}</UniqueIdentifier>
     </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example">
+      <UniqueIdentifier>{5b066be5-3443-497c-99c8-6bbb2e3c877f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01">
+      <UniqueIdentifier>{73289bb9-8944-4f9e-ba1c-c9ad031d7ac5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes">
+      <UniqueIdentifier>{89b08435-1391-4c8b-b10c-17a7034c4646}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Global">
+      <UniqueIdentifier>{5c83e76e-06cd-4175-a30d-e800d8fae043}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Global\Define">
+      <UniqueIdentifier>{2a39cf1d-d98e-464d-b038-da909304247d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training">
+      <UniqueIdentifier>{55ac49d0-b158-42e2-a4c2-dacab3d64afc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01">
+      <UniqueIdentifier>{27fe2f28-543f-4082-b30c-ad9bf1c57171}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02">
+      <UniqueIdentifier>{f42da1a7-c6df-4803-9ffb-90edcc02803f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02">
+      <UniqueIdentifier>{de7cfd76-ed08-4e50-b41c-8e2a00419b71}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01\E01Example_01.h">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Global\Define\KDefine+Global.h">
+      <Filter>Classes\Global\Define</Filter>
+    </ClInclude>
+    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01\T01Training_01.h">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01</Filter>
+    </ClInclude>
+    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02\E01Example_02.h">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02</Filter>
+    </ClInclude>
+    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02\T01Training_02.h">
+      <Filter>03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
