--- a/Programming/C++/Example/Example/Example.vcxproj
+++ b/Programming/C++/Example/Example/Example.vcxproj
@@ -123,28 +123,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01\E01Example_01.cpp" />
-    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02\E01Example_02.cpp">
+    <ClCompile Include="Classes\Example\Example_01\E01Example_01.cpp">
       <DeploymentContent>false</DeploymentContent>
     </ClCompile>
-    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01\T01Training_01.cpp" />
-    <ClCompile Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02\T01Training_02.cpp" />
+    <ClCompile Include="Classes\Example\Example_02\E01Example_02.cpp">
+      <DeploymentContent>false</DeploymentContent>
+    </ClCompile>
+    <ClCompile Include="Classes\Training\Training_01\T01Training_01.cpp">
+      <DeploymentContent>false</DeploymentContent>
+    </ClCompile>
+    <ClCompile Include="Classes\Training\Training_02\T01Training_02.cpp">
+      <DeploymentContent>false</DeploymentContent>
+    </ClCompile>
     <ClCompile Include="Example.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_01\E01Example_01.h">
+    <ClInclude Include="Classes\Example\Example_01\E01Example_01.h">
       <DeploymentContent>false</DeploymentContent>
     </ClInclude>
-    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Example\Example_02\E01Example_02.h">
-      <DeploymentContent>false</DeploymentContent>
-    </ClInclude>
-    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_01\T01Training_01.h">
-      <DeploymentContent>false</DeploymentContent>
-    </ClInclude>
-    <ClInclude Include="03412922000101-KoreaIT_Weekday_Cpp_0001\Training\Training_02\T01Training_02.h">
+    <ClInclude Include="Classes\Example\Example_02\E01Example_02.h">
       <DeploymentContent>false</DeploymentContent>
     </ClInclude>
     <ClInclude Include="Classes\Global\Define\KDefine+Global.h">
+      <DeploymentContent>false</DeploymentContent>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_01\T01Training_01.h">
+      <DeploymentContent>false</DeploymentContent>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_02\T01Training_02.h">
       <DeploymentContent>false</DeploymentContent>
     </ClInclude>
   </ItemGroup>
