--- a/Programming/C++/Example/Example/Example.vcxproj
+++ b/Programming/C++/Example/Example/Example.vcxproj
@@ -76,6 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalOptions>/source-charset: utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -102,6 +103,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalOptions>/source-charset: utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,6 +131,21 @@
     <ClCompile Include="Classes\Example\Example_02\E01Example_02.cpp">
       <DeploymentContent>false</DeploymentContent>
     </ClCompile>
+    <ClCompile Include="Classes\Example\Example_03\E01Example_03.cpp" />
+    <ClCompile Include="Classes\Example\Example_04\E01Example_04.cpp" />
+    <ClCompile Include="Classes\Example\Example_05\E01Example_05.cpp" />
+    <ClCompile Include="Classes\Example\Example_06\E01Example_06.cpp" />
+    <ClCompile Include="Classes\Example\Example_07\E01Example_07.cpp" />
+    <ClCompile Include="Classes\Example\Example_08\CWidget_E08.cpp" />
+    <ClCompile Include="Classes\Example\Example_08\E01Example_08.cpp" />
+    <ClCompile Include="Classes\Example\Example_09\CWidget_E09.cpp" />
+    <ClCompile Include="Classes\Example\Example_09\E01Example_09.cpp" />
+    <ClCompile Include="Classes\Example\Example_10\CWidget_E10.cpp" />
+    <ClCompile Include="Classes\Example\Example_10\E01Example_10.cpp" />
+    <ClCompile Include="Classes\Example\Example_11\CSingleton_E11.cpp" />
+    <ClCompile Include="Classes\Example\Example_11\CWidget_E11.cpp" />
+    <ClCompile Include="Classes\Example\Example_11\CWidget_E11.h" />
+    <ClCompile Include="Classes\Example\Example_11\E01Example_11.cpp" />
     <ClCompile Include="Classes\Training\Training_01\T01Training_01.cpp">
       <DeploymentContent>false</DeploymentContent>
     </ClCompile>
@@ -144,6 +161,19 @@
     <ClInclude Include="Classes\Example\Example_02\E01Example_02.h">
       <DeploymentContent>false</DeploymentContent>
     </ClInclude>
+    <ClInclude Include="Classes\Example\Example_03\E01Example_03.h" />
+    <ClInclude Include="Classes\Example\Example_04\E01Example_04.h" />
+    <ClInclude Include="Classes\Example\Example_05\E01Example_05.h" />
+    <ClInclude Include="Classes\Example\Example_06\E01Example_06.h" />
+    <ClInclude Include="Classes\Example\Example_07\E01Example_07.h" />
+    <ClInclude Include="Classes\Example\Example_08\CWidget_E08.h" />
+    <ClInclude Include="Classes\Example\Example_08\E01Example_08.h" />
+    <ClInclude Include="Classes\Example\Example_09\CWidget_E09.h" />
+    <ClInclude Include="Classes\Example\Example_09\E01Example_09.h" />
+    <ClInclude Include="Classes\Example\Example_10\CWidget_E10.h" />
+    <ClInclude Include="Classes\Example\Example_10\E01Example_10.h" />
+    <ClInclude Include="Classes\Example\Example_11\CSingleton_E11.h" />
+    <ClInclude Include="Classes\Example\Example_11\E01Example_11.h" />
     <ClInclude Include="Classes\Global\Define\KDefine+Global.h">
       <DeploymentContent>false</DeploymentContent>
     </ClInclude>
