--- a/Programming/C++/Example/Example/Example.vcxproj.filters
+++ b/Programming/C++/Example/Example/Example.vcxproj.filters
@@ -107,6 +107,30 @@
     <ClCompile Include="Classes\Training\Training_02\CArray_T02.cpp">
       <Filter>Classes\Training\Training_02</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\Training\Training_03\T01Training_03.cpp">
+      <Filter>Classes\Training\Training_03</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Training\Training_04\T01Training_04.cpp">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Training\Training_04\CCanvas_T04.cpp">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Training\Training_04\CShape_T04.cpp">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example\Example_16\E01Example_16.cpp">
+      <Filter>Classes\Example\Example_16 %28연산자 오버로딩%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example\Example_17\E01Example_17.cpp">
+      <Filter>Classes\Example\Example_17 %28템플릿 - 1%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example\Example_18\E01Example_18.cpp">
+      <Filter>Classes\Example\Example_18 %28템플릿 - 2%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example\Example_16\CWidget_E16.cpp">
+      <Filter>Classes\Example\Example_16 %28연산자 오버로딩%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Classes">
@@ -183,6 +207,12 @@
     </Filter>
     <Filter Include="Classes\Example\Example_18 %28템플릿 - 2%29">
       <UniqueIdentifier>{262b8886-31b8-444a-8668-8336315ff41d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Training\Training_03">
+      <UniqueIdentifier>{45afa5e0-2233-4a0a-a2e4-7d192a4a1665}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Training\Training_04">
+      <UniqueIdentifier>{ae412380-5d4a-42ca-81a8-55680fea4990}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -284,6 +314,33 @@
     </ClInclude>
     <ClInclude Include="Classes\Training\Training_02\CArray_T02.h">
       <Filter>Classes\Training\Training_02</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_03\T01Training_03.h">
+      <Filter>Classes\Training\Training_03</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_04\KDefine+Training_04.h">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_04\T01Training_04.h">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_04\CCanvas_T04.h">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Training\Training_04\CShape_T04.h">
+      <Filter>Classes\Training\Training_04</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example\Example_16\E01Example_16.h">
+      <Filter>Classes\Example\Example_16 %28연산자 오버로딩%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example\Example_17\E01Example_17.h">
+      <Filter>Classes\Example\Example_17 %28템플릿 - 1%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example\Example_18\E01Example_18.h">
+      <Filter>Classes\Example\Example_18 %28템플릿 - 2%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example\Example_16\CWidget_E16.h">
+      <Filter>Classes\Example\Example_16 %28연산자 오버로딩%29</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
